# dice

./: com.github.0next.dice.yml  meson.build
data/: dice.desktop.in  dice.metainfo.xml.in
po/: LINGUAS  POTFILES  com.github.0next.dice.pot  de.po  es.po  ko.po
src/: Application.vala
